--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "axios": "^0.21.0",
+    "leaflet": "^1.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
+    "react-leaflet": "^3.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "typescript": "^4.0.3",
@@ -44,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/leaflet": "^1.5.19",
     "@types/react-router-dom": "^5.1.6"
   }
 }
