--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-dropzone": "^11.2.4",
     "react-icons": "^4.1.0",
     "react-leaflet": "^3.0.2",
+    "react-modal": "^3.12.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "typescript": "^4.0.3",
@@ -49,6 +50,7 @@
   "devDependencies": {
     "@types/leaflet": "^1.5.19",
     "@types/react-leaflet": "^2.5.2",
+    "@types/react-modal": "^3.10.6",
     "@types/react-router-dom": "^5.1.6"
   }
 }
